add header and hero

--- a/css/main.css
+++ b/css/main.css
@@ -307,4 +307,85 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.logo {
+  font-family: "Ribeye", cursive;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.06em;
+}
+
+.btn {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__btn {
+  margin-left: auto;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navigation__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navigation__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+
+.hero {
+  max-width: 1600px;
+  background-image: url(../images/hero_bg@1x.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-title {
+  font-family: "Gelasio", serif;
+  font-weight: 700;
+  font-size: 65px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+
+.hero__text {
+  font-size: 18px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+}
 /*# sourceMappingURL=main.css.map */
