--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,12 +1,15 @@
-// $font-family-base: , sans-serif;
-// $font-family-logo: , sans-serif;
-// $normal: 400;
-// $semibold: 500;
-// $bold: 700;
-// $extra-bold: 900;
+$font-family-base: 'Roboto', sans-serif;
+$font-family-logo: 'Ribeye', cursive;
+$font-family-title: 'Gelasio', serif;
+$normal: 400;
+$semibold: 500;
+$bold: 700;
+$extra-bold: 900;
 
 // $primary-text-color: ;
 // $secondary-text-color: ;
+$nav-text-color: #ffffff;
+$hero-text-color: #ffffff;
 // $accent-color: ;
 // $accent-color-hovered: ;
 
