--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,10 @@ a {
   color: inherit;
 }
 
+button {
+  cursor: pointer;
+}
+
 @font-face {
   font-family: 'Ribeye';
   font-style: normal;
@@ -357,18 +361,26 @@ body {
 }
 
 .container {
-  width: 1170px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .logo {
+  margin-right: 211px;
   font-family: "Ribeye", cursive;
   font-weight: 400;
   font-size: 24px;
   line-height: 1.5;
   letter-spacing: 0.06em;
+  color: #ffffff;
 }
 
 .btn {
@@ -376,22 +388,68 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: #c9453b;
+  border-radius: 5px;
+  border: none;
+  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover, .btn:focus {
+  background-color: #b83c33;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 1px 1px 16px #ffffff, 5px -5px 30px #ffffff;
+}
+
+.btn:active {
+  position: relative;
+  top: 1px;
+  left: 1px;
+  -webkit-box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.5), 3px 3px 9px #902f28;
+          box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.5), 3px 3px 9px #902f28;
+  border: none;
+  text-shadow: 1px 1px 16px #ffffff, 5px -5px 30px #ffffff;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding-top: 42px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__btn {
   margin-left: auto;
+  padding: 14px 35px;
 }
 
 .navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navigation__list {
@@ -405,27 +463,52 @@ body {
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.navigation__item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .hero {
-  max-width: 1600px;
-  background-image: url(../images/hero_bg@1x.jpg);
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 286px;
+  padding-bottom: 244px;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(../images/hero_bg@1x.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/hero_bg@1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.hero-title {
+.hero__title {
+  margin-bottom: 30px;
   font-family: "Gelasio", serif;
   font-weight: 700;
   font-size: 65px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.hero__title--top {
+  display: block;
 }
 
 .hero__text {
+  width: 45%;
+  margin-bottom: 40px;
+  margin-left: 12px;
   font-size: 18px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.hero__btn {
+  margin-left: 12px;
+  padding: 14px 35px;
 }
 /*# sourceMappingURL=main.css.map */
