--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,5 +2,5 @@
   margin-right: 211px;
   font-family: $font-family-logo;
   @include font($normal, 24px, 1.5, 0.06em);
-  color: $text-color-hero-header;
+  color: $text-color-light;
 }
