--- a/sass/components/_module.scss
+++ b/sass/components/_module.scss
@@ -1,8 +1,9 @@
 @import './container';
 @import './logo';
-// @import './contacts';
 @import './buttons';
 @import './section';
+@import './cards';
+// @import './contacts';
 // @import './social';
 // @import './subscription';
 // @import './modal';
