--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,8 +8,10 @@ $bold: 700;
 // $primary-text-color: ;
 // $secondary-text-color: ;
 
-$text-color-hero-header: #ffffff;
-$bg-color-button: #c9453b;
+$text-color-light: #ffffff;
+$text-color-dark: #000000;
+$bg-color-accent: #c9453b;
+$bg-color-transparent: rgba(0, 0, 0, 0.3);
 
 // $accent-color: ;
 // $accent-color-hovered: ;
