--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
       $bg-color-transparent,
       $bg-color-transparent
     ),
-    url(../../images/hero_bg@1x.jpg);
+    url(../images/hero_bg@1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -21,7 +21,7 @@
         $bg-color-transparent,
         $bg-color-transparent
       ),
-      url(../../images/hero_bg@2x.jpg);
+      url(../images/hero_bg@2x.jpg);
   }
 }
 
