--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,15 +1,21 @@
 .cards {
   display: flex;
+  justify-content: space-between;
+
+  //   @media screen and (min-width: 1200px) {
+  //     margin: -15px;
+  //   }
 }
 
 .cards__item {
   width: 100%;
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
+  //   &:not(:last-child) {
+  //     margin-right: 30px;
+  //   }
 
   @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 3 - 30px);
+    // margin: 15px;
   }
 }
 
