fix fonts' ways

--- a/css/main.css
+++ b/css/main.css
@@ -317,7 +317,7 @@ button {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Ribeye"), url("../../fonts/ribeye-regular-webfont.woff") format("woff"), url("../../fonts/ribeye-regular-webfont.woff2") format("woff2");
+  src: local("Ribeye"), url("../fonts/ribeye-regular-webfont.woff") format("woff"), url("../fonts/ribeye-regular-webfont.woff2") format("woff2");
 }
 
 @font-face {
@@ -325,7 +325,7 @@ button {
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local("Gelasio"), url("../../fonts/gelasio-medium-webfont.woff") format("woff"), url("../../fonts/gelasio-medium-webfont.woff2") format("woff2");
+  src: local("Gelasio"), url("../fonts/gelasio-medium-webfont.woff") format("woff"), url("../fonts/gelasio-medium-webfont.woff2") format("woff2");
 }
 
 @font-face {
@@ -333,7 +333,7 @@ button {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local("Gelasio"), url("../../fonts/gelasio-bold-webfont.woff") format("woff"), url("../../fonts/gelasio-bold-webfont.woff2") format("woff2");
+  src: local("Gelasio"), url("../fonts/gelasio-bold-webfont.woff") format("woff"), url("../fonts/gelasio-bold-webfont.woff2") format("woff2");
 }
 
 @font-face {
@@ -341,7 +341,7 @@ button {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Roboto"), url("../../fonts/roboto-regular-webfont.woff") format("woff"), url("../../fonts/roboto-regular-webfont.woff2") format("woff2");
+  src: local("Roboto"), url("../fonts/roboto-regular-webfont.woff") format("woff"), url("../fonts/roboto-regular-webfont.woff2") format("woff2");
 }
 
 @font-face {
@@ -349,7 +349,7 @@ button {
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local("Roboto"), url("../../fonts/roboto-medium-webfont.woff") format("woff"), url("../../fonts/roboto-medium-webfont.woff2") format("woff2");
+  src: local("Roboto"), url("../fonts/roboto-medium-webfont.woff") format("woff"), url("../fonts/roboto-medium-webfont.woff2") format("woff2");
 }
 
 body {
