--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,16 +1,11 @@
-// font-family: 'Gelasio', serif;
-// font-family: 'Ribeye', cursive;
-// font-family: 'Roboto', sans-serif;
-
-// Gelasio:wght@500;700 Ribeye&Roboto:wght@400;500
 @font-face {
   font-family: 'Ribeye';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: local('Ribeye'),
-    url('../../fonts/ribeye-regular-webfont.woff') format('woff'),
-    url('../../fonts/ribeye-regular-webfont.woff2') format('woff2');
+    url('../fonts/ribeye-regular-webfont.woff') format('woff'),
+    url('../fonts/ribeye-regular-webfont.woff2') format('woff2');
 }
 
 @font-face {
@@ -19,8 +14,8 @@
   font-weight: 500;
   font-display: swap;
   src: local('Gelasio'),
-    url('../../fonts/gelasio-medium-webfont.woff') format('woff'),
-    url('../../fonts/gelasio-medium-webfont.woff2') format('woff2');
+    url('../fonts/gelasio-medium-webfont.woff') format('woff'),
+    url('../fonts/gelasio-medium-webfont.woff2') format('woff2');
 }
 
 @font-face {
@@ -29,8 +24,8 @@
   font-weight: 700;
   font-display: swap;
   src: local('Gelasio'),
-    url('../../fonts/gelasio-bold-webfont.woff') format('woff'),
-    url('../../fonts/gelasio-bold-webfont.woff2') format('woff2');
+    url('../fonts/gelasio-bold-webfont.woff') format('woff'),
+    url('../fonts/gelasio-bold-webfont.woff2') format('woff2');
 }
 
 @font-face {
@@ -39,8 +34,8 @@
   font-weight: 400;
   font-display: swap;
   src: local('Roboto'),
-    url('../../fonts/roboto-regular-webfont.woff') format('woff'),
-    url('../../fonts/roboto-regular-webfont.woff2') format('woff2');
+    url('../fonts/roboto-regular-webfont.woff') format('woff'),
+    url('../fonts/roboto-regular-webfont.woff2') format('woff2');
 }
 
 @font-face {
@@ -49,6 +44,6 @@
   font-weight: 500;
   font-display: swap;
   src: local('Roboto'),
-    url('../../fonts/roboto-medium-webfont.woff') format('woff'),
-    url('../../fonts/roboto-medium-webfont.woff2') format('woff2');
+    url('../fonts/roboto-medium-webfont.woff') format('woff'),
+    url('../fonts/roboto-medium-webfont.woff2') format('woff2');
 }
